--- a/solution/docker-compose.yaml
+++ b/solution/docker-compose.yaml
@@ -4,7 +4,13 @@ services:
     ports:
       - "9393:9300"
     volumes:
-      - /home/anand/Abhishek/csvserver/solution/inputFile:/csvserver/inputdata
+      - ./inputFile:/csvserver/inputdata
     environment:
       - CSVSERVER_BORDER=Orange 
     image: "infracloudio/csvserver"
+  prometheus1:
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    image: "prom/prometheus:v2.22.0" 
